# syracuse

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README.md  Readme-LINUX.txt  aclocal.m4  changes.txt  configure  configure.ac  configure~  modules.dmp  notes.txt  rom-info.txt
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4
configs/: configs.txt
hostfs/: arculfs.txt
old-docs/: readme.txt
podules/aeh50/src/: Makefile.am  Makefile.in  aeh50.c
podules/aeh54/src/: Makefile.am  Makefile.in  aeh54.c  seeq8005.c  seeq8005.h
podules/aka05/src/: Makefile.am  Makefile.in  aka05.c
podules/aka10/src/: Makefile.am  Makefile.in  aka10.c
podules/aka12/src/: Makefile.am  Makefile.in  aka12.c  aka12.h
podules/aka16/src/: Makefile.am  Makefile.in  aka16.c
podules/aka31/src/: Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  aka31.c  aka31.h  d71071l.c  d71071l.h  wd33c93a.c  wd33c93a.h
podules/common/cdrom/: cdrom-linux-ioctl.c  cdrom-osx-ioctl.c
podules/common/midi/: midi.h  midi_alsa.c  midi_null.c  midi_win.c
podules/common/scsi/: hdd_file.c  scsi_cd.c  scsi_config.c  scsi_hd.c
podules/common/sound/: sound_alsain.c  sound_in.h  sound_in_null.c  sound_openal.c  sound_out.h  sound_wavein.c
podules/common/uart/: 16550.c  16550.h
podules/lark/src/: Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  ad1848.c  ad1848.h  am7202a.c  am7202a.h  lark.c  lark.h
podules/midimax/src/: Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  midimax.c  midimax.h
podules/morley_uap/src/: Makefile.am  Makefile.in  morley_uap.c
podules/oak_scsi/src/: Makefile.am  Makefile.in  ncr5380.c  oak_scsi.c  oak_scsi.h
podules/pccard/src/: Makefile.am  pccard_podule.c  pccard_podule.h
podules/ultimatecdrom/src/: Makefile.am  Makefile.in  Makefile.mingw  mitsumi.c  mitsumi.h  ultimatecdrom.c  ultimatecdrom.h
src/: .podules-linux.c.kate-swp  82c711.c  82c711.h  82c711_fdc.c  82c711_fdc.h  Makefile.am  Makefile.in  arc.h  arm.c  arm.h  bmu.c  cmos.c  cmos.h  colourcard.c  config.c  config.h  cp15.c  cp15.h  ddnoise.c  debugger.c  debugger.h  debugger_swis.c  disc.c  disc.h  disc_adf.c  disc_adf.h  disc_apd.c  disc_apd.h  disc_fdi.c  disc_fdi.h  disc_hfe.c  disc_jfd.c  disc_jfd.h  disc_mfm_common.c  disc_mfm_common.h  disc_scp.c  disc_ssd.c  disc_ssd.h  ds2401.c  ds2401.h  (+93 more)
